--- a/.github/ISSUE_TEMPLATE/3-feature-request.yml
+++ b/.github/ISSUE_TEMPLATE/3-feature-request.yml
@@ -4,38 +4,37 @@ title: "Summarize your request. (e.g., \"Request to add ROS to Open3D PointCloud
 labels: [feature request]
 
 body:
+
 - type: checkboxes
   attributes:
-    label: "I confirm that before submitting the issue I have taken the following steps:"
-    description: It is required to mark the checkboxes, before submitting the issue.
+    label: "Checklist"
     options:
       - label: "I have searched for [similar issues](https://github.com/isl-org/Open3D/issues)."
         required: true
-      - label: "I have checked with the [latest documentation](http://www.open3d.org/docs/latest/) properly. [For example: [Installing from PyPI](http://www.open3d.org/docs/latest/getting_started.html#installing-from-pypi-or-conda), [Build from source](http://www.open3d.org/docs/latest/compilation.html#build-from-source), [ARM Support](http://www.open3d.org/docs/latest/arm.html#arm-support)]."
+      - label: "For Python issues, I have tested with the [latest development wheel](http://www.open3d.org/docs/latest/getting_started.html#development-version-pip)."
+        required: true
+      - label: "I have checked the [release documentation](http://www.open3d.org/docs/release/) and the [latest documentation](http://www.open3d.org/docs/latest/) (for `master` branch)."
         required: true
 
 - type: markdown
   attributes:
-    
-    value: >
 
+    value: >
 
 - type: textarea
   attributes:
     description: >
-        If you're looking to request a new feature or change in functionality,
-        including adding or changing the meaning of arguments to an existing 
-        function.
-    label: "Proposed new feature or change:"
+        Describe what feature you'd like to have in Open3D.
+    label: "Proposed new feature or change"
   validations:
     required: true
 
 - type: textarea
   attributes:
-    label: "References:"
-    description: Please share some references that can help us know more about this feature and try to implement the same. For ex. research paper, open-source codes, stackoverflow, etc. 
+    label: "References"
+    description: Please share some references that can help us know more about this feature and try to implement the same. For ex. research paper, open-source codes, stackoverflow, etc.
 
 - type: textarea
   attributes:
-    label: "Additional information:"
+    label: "Additional information"
     description: Add any other context or screenshots about the feature request here.
