--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -74,6 +74,11 @@ if(LINUX_AARCH64 OR APPLE_AARCH64)
 else()
     option(USE_BLAS               "Use BLAS/LAPACK instead of MKL"           OFF)
 endif()
+if(USE_BLAS)
+    option(BUILD_BLAS_FROM_SOURCE "Build OpenBLAS from source"               ON )
+else()
+    option(BUILD_BLAS_FROM_SOURCE "Build OpenBLAS from source"               OFF)
+endif()
 option(USE_SYSTEM_EIGEN3          "Use system pre-installed eigen3"          OFF)
 option(USE_SYSTEM_FMT             "Use system pre-installed fmt"             OFF)
 option(USE_SYSTEM_GLEW            "Use system pre-installed glew"            OFF)
