migrate from lego to master

--- a/cpp/open3d/visualization/CMakeLists.txt
+++ b/cpp/open3d/visualization/CMakeLists.txt
@@ -23,6 +23,7 @@ target_sources(visualization PRIVATE
     utility/PointCloudPicker.cpp
     utility/SelectionPolygon.cpp
     utility/SelectionPolygonVolume.cpp
+    utility/SpaceMouse.cpp
 )
 
 target_sources(visualization PRIVATE
