--- a/.github/workflows/Dockerfile.openblas
+++ b/.github/workflows/Dockerfile.openblas
@@ -34,9 +34,7 @@ RUN apt-get update && apt-get install -y \
 RUN apt-get update && apt-get install -y \
     build-essential \
     clang-7 \
-    curl \
     git  \
-    wget \
  && rm -rf /var/lib/apt/lists/*
 
 # Install ccache after build-essential (gcc, g++).
@@ -90,7 +88,6 @@ RUN apt-get update -y && apt-get install -y \
     libreadline-dev \
     libsqlite3-dev \
     wget \
-    curl \
     llvm \
     libncurses5-dev \
     libncursesw5-dev \
@@ -101,13 +98,13 @@ RUN apt-get update -y && apt-get install -y \
     python-openssl \
     git \
  && rm -rf /var/lib/apt/lists/*
-RUN git clone --depth=1 https://github.com/yyuu/pyenv.git /root/.pyenv
+RUN git clone --depth=1 https://github.com/pyenv/pyenv.git /root/.pyenv
 ENV PYENV_ROOT="/root/.pyenv"
 ENV PATH="${PYENV_ROOT}/bin:${PYENV_ROOT}/shims:${PATH}"
 RUN git clone https://github.com/momo-lab/pyenv-install-latest.git "$(pyenv root)"/plugins/pyenv-install-latest
 
 # CMake
-# PWD is /, camke will be installed to /root/${CMAKE_VER}/bin/cmake
+# PWD is /, cmake will be installed to /root/${CMAKE_VER}/bin/cmake
 RUN CMAKE_VER_NUMBERS=$(echo "${CMAKE_VER}" | cut -d"-" -f2) \
  && wget -q https://github.com/Kitware/CMake/releases/download/v${CMAKE_VER_NUMBERS}/${CMAKE_VER}.tar.gz \
  && tar -xf ${CMAKE_VER}.tar.gz \
