--- a/cpp/benchmarks/core/CMakeLists.txt
+++ b/cpp/benchmarks/core/CMakeLists.txt
@@ -2,6 +2,7 @@ target_sources(benchmarks PRIVATE
     BinaryEW.cpp
     HashMap.cpp
     Linalg.cpp
+    Logging.cpp
     MemoryManager.cpp
     ParallelFor.cpp
     Reduction.cpp
