set USE_SYSTEM_BLAS to "not BUILD_BLAS_FROM_SOURCE"

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -75,9 +75,9 @@ else()
     option(USE_BLAS               "Use BLAS/LAPACK instead of MKL"           OFF)
 endif()
 if(USE_BLAS)
-    option(BUILD_BLAS_FROM_SOURCE "Build OpenBLAS from source"               ON )
+    option(USE_SYSTEM_BLAS        "Use system pre-installed openblas"        OFF)
 else()
-    option(BUILD_BLAS_FROM_SOURCE "Build OpenBLAS from source"               OFF)
+    option(USE_SYSTEM_BLAS        "Use system pre-installed openblas"        ON )
 endif()
 option(USE_SYSTEM_EIGEN3          "Use system pre-installed eigen3"          OFF)
 option(USE_SYSTEM_FMT             "Use system pre-installed fmt"             OFF)
