--- a/.github/workflows/ubuntu-cuda.yml
+++ b/.github/workflows/ubuntu-cuda.yml
@@ -123,12 +123,12 @@ jobs:
         run: |
           gcloud compute ssh "${INSTANCE_NAME}" \
             --zone="${GCE_ZONE}" \
-            --command="sudo Open3D/.github/workflows/docker_build.sh ${CI_CONFIG}"
+            --command="sudo Open3D/docker/docker_build.sh ${CI_CONFIG}"
       - name: VM run docker
         run: |
           gcloud compute ssh "${INSTANCE_NAME}" \
             --zone="${GCE_ZONE}" \
-            --command="sudo Open3D/.github/workflows/docker_test.sh ${CI_CONFIG}"
+            --command="sudo Open3D/docker/docker_test.sh ${CI_CONFIG}"
       - name: VM ccache upload
         if: ${{ github.ref == 'refs/heads/master' }}
         run: |
