--- a/.github/workflows/ubuntu-openblas.yml
+++ b/.github/workflows/ubuntu-openblas.yml
@@ -29,7 +29,7 @@ jobs:
           maximize_ubuntu_github_actions_build_space
       - name: Docker build
         run: |
-          .github/workflows/docker_build.sh openblas-amd64-py36-dev
+          docker/docker_build.sh openblas-amd64-py36-dev
       - name: GCloud CLI setup
         uses: google-github-actions/setup-gcloud@v0.2.1
         with:
@@ -42,7 +42,7 @@ jobs:
           gsutil cp ${GITHUB_WORKSPACE}/open3d-ci-openblas-amd64.tar.gz gs://open3d-ci-cache/ || true
       - name: Docker test
         run: |
-          .github/workflows/docker_test.sh openblas-amd64-py36-dev
+          docker/docker_test.sh openblas-amd64-py36-dev
 
   # How to resolve GitHub Actions ARM64 build timeout.
   #
@@ -52,7 +52,7 @@ jobs:
   # and update the ccache artifacts on the Google Cloud bucket. Run:
   #
   # ```bash
-  # .github/workflows/docker_build.sh openblas-arm64-py36-dev
+  # docker/docker_build.sh openblas-arm64-py36-dev
   # gsutil cp open3d-ci-openblas-arm64.tar.gz gs://open3d-ci-cache/
   # ```
   openblas-arm64:
@@ -77,7 +77,7 @@ jobs:
           sudo apt-get --yes install qemu binfmt-support qemu-user-static
       - name: Docker build
         run: |
-          .github/workflows/docker_build.sh openblas-arm64-py36-dev
+          docker/docker_build.sh openblas-arm64-py36-dev
       - name: GCloud CLI setup
         uses: google-github-actions/setup-gcloud@v0.2.1
         with:
@@ -90,4 +90,4 @@ jobs:
           gsutil cp ${GITHUB_WORKSPACE}/open3d-ci-openblas-arm64.tar.gz gs://open3d-ci-cache/ || true
       - name: Docker test
         run: |
-          .github/workflows/docker_test.sh openblas-arm64-py36-dev
+          docker/docker_test.sh openblas-arm64-py36-dev
