Fix typo in issues template

--- a/.github/ISSUE_TEMPLATE/config.yml
+++ b/.github/ISSUE_TEMPLATE/config.yml
@@ -1,5 +1,5 @@
 contact_links:
-  - name: Links to Open3D Documentation and Tutorials
+  - name: Link to Open3D Documentation and Tutorials
     url: http://www.open3d.org/docs/latest/
     about: "Read the documentation and tutorials for Open3D."
   - name: Link to Open3D Discord Server
