--- a/.github/workflows/ubuntu.yml
+++ b/.github/workflows/ubuntu.yml
@@ -24,11 +24,13 @@ jobs:
       fail-fast: false
       matrix:
         CONFIG: [ON, OFF]
+        USE_CALNG: [ON, OFF]
     env:
       SHARED: ${{ matrix.CONFIG }}
       BUILD_CUDA_MODULE: OFF
       BUILD_TENSORFLOW_OPS: ${{ matrix.CONFIG }}
       BUILD_PYTORCH_OPS: ${{ matrix.CONFIG }}
+      USE_CALNG: ${{ MATRIX.USE_CALNG }}
     steps:
       - name: Cancel outdated
         uses: fkirc/skip-duplicate-actions@master
