--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -479,6 +479,8 @@ if (Python3_EXECUTABLE)
     )
 endif()
 
+include(Open3DPackaging)
+
 # `make check-cpp-style` checks style for c++/cuda files.
 # This works outside of python virtualenv.
 add_custom_target(check-cpp-style
