--- a/.github/workflows/macos.yml
+++ b/.github/workflows/macos.yml
@@ -26,7 +26,7 @@ jobs:
       matrix:
         BUILD_ML_OPS: [ON, OFF]
     env:
-      SHARED: OFF
+      SHARED: ${{ matrix.BUILD_ML_OPS }}
       BUILD_CUDA_MODULE: OFF
       BUILD_TENSORFLOW_OPS: ${{ matrix.BUILD_ML_OPS }}
       BUILD_PYTORCH_OPS: ${{ matrix.BUILD_ML_OPS }}
@@ -65,7 +65,8 @@ jobs:
           PATH=/usr/local/var/homebrew/linked/ccache/libexec:$PATH
           ccache -s
           ./util/run_ci.sh
-          ccache -s
+          DEVEL_PKG_NAME="$(basename package/open3d*.tgz)"
+          echo "DEVEL_PKG_NAME=$DEVEL_PKG_NAME" >> $GITHUB_ENV
       - name: Build Open3D viewer app
         if: ${{ matrix.BUILD_ML_OPS == 'OFF' }}
         run: |
@@ -74,6 +75,32 @@ jobs:
           make -j${NPROC} Open3DViewer
           pushd bin
           zip -rv open3d-app-macosx-10_15.zip Open3D.app
+          ccache -s
+
+      - name: Upload package
+        if: ${{ env.SHARED == 'ON' }}
+        uses: actions/upload-artifact@v2
+        with:
+          name: open3d-devel-macosx
+          path: build/package/${{ env.DEVEL_PKG_NAME }}
+          if-no-files-found: error
+
+      - name: GCloud CLI setup
+        if: ${{ github.ref == 'refs/heads/master' && env.SHARED == 'ON' }}
+        # https://github.com/GoogleCloudPlatform/github-actions/issues/100#issuecomment-650798308
+        uses: google-github-actions/setup-gcloud@v0.2.1
+        with:
+          version: ${{ env.GCE_CLI_GHA_VERSION }}
+          service_account_key: ${{ secrets.GCE_SA_KEY_GPU_CI }}
+          project_id: ${{ secrets.GCE_DOCS_PROJECT }}
+          export_default_credentials: true
+
+      - name: Upload package to GCS bucket
+        if: ${{ github.ref == 'refs/heads/master' && env.SHARED == 'ON' }}
+        run: |
+          gsutil cp build/package/${{ env.DEVEL_PKG_NAME }} gs://open3d-releases-master/devel/
+          echo "Download devel package at: https://storage.googleapis.com/open3d-releases-master/devel/${{ env.DEVEL_PKG_NAME }}"
+
       - name: Upload Open3D viewer app
         uses: actions/upload-artifact@v2
         if: ${{ matrix.BUILD_ML_OPS == 'OFF' }}
