--- a/.github/workflows/ubuntu-cuda.yml
+++ b/.github/workflows/ubuntu-cuda.yml
@@ -124,6 +124,26 @@ jobs:
           gcloud compute ssh "${INSTANCE_NAME}" \
             --zone="${GCE_ZONE}" \
             --command="sudo Open3D/docker/docker_build.sh ${CI_CONFIG}"
+          gcloud compute scp --zone="${GCE_ZONE}" \
+            "${INSTANCE_NAME}":/opt/mount/open3d-devel-linux*.tar.xz $PWD
+
+      - name: Upload package
+        if: ${{ matrix.CI_CONFIG == '3-ml-shared-bionic' }}
+        uses: actions/upload-artifact@v2
+        with:
+          name: open3d-devel-linux-x86_64
+          path: open3d-devel-linux*.tar.xz
+          if-no-files-found: error
+
+      - name: Upload package to GCS bucket
+        if: ${{ github.ref == 'refs/heads/master' && matrix.CI_CONFIG == '3-ml-shared-bionic' }}
+        run: |
+          gcloud compute ssh "${INSTANCE_NAME}" \
+            --zone="${GCE_ZONE}" \
+            --command="ls -alh /opt/mount \
+                       && gsutil cp /opt/mount/open3d-devel-linux-*.tar.xz \
+                       gs://open3d-releases-master/devel/"
+
       - name: VM run docker
         run: |
           gcloud compute ssh "${INSTANCE_NAME}" \
