--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -119,6 +119,48 @@ jobs:
             --target build-examples-iteratively
           cmake --build . --parallel ${{ env.NPROC }} --config ${{ matrix.CONFIG }} `
             --target INSTALL
+      - name: Package
+        working-directory: ${{ env.BUILD_DIR }}
+        if: ${{ matrix.SHARED == 'ON' && matrix.BUILD_CUDA == 'OFF' }}
+        run: |
+          $ErrorActionPreference = 'Stop'
+          cmake --build . --parallel ${{ env.NPROC }} --config ${{ matrix.CONFIG }} `
+            --target package
+          $DEVEL_PKG_NAME=(Get-ChildItem package/open3d*.zip).Name
+          echo "DEVEL_PKG_NAME=$DEVEL_PKG_NAME"  | Out-File -FilePath $env:GITHUB_ENV -Encoding utf8 -Append
+
+      - name: Upload package
+        if: ${{ matrix.SHARED == 'ON' && matrix.BUILD_CUDA == 'OFF' }}
+        uses: actions/upload-artifact@v2
+        with:
+          name: open3d-devel-win
+          path: ${{ env.BUILD_DIR }}/package/${{ env.DEVEL_PKG_NAME }}
+          if-no-files-found: error
+
+      - name: GCloud CLI setup
+        if: ${{ github.ref == 'refs/heads/master' && matrix.SHARED == 'ON' && matrix.BUILD_CUDA == 'OFF' }}
+        # https://github.com/GoogleCloudPlatform/github-actions/issues/100#issuecomment-650798308
+        uses: google-github-actions/setup-gcloud@v0.2.1
+        env:
+          CLOUDSDK_PYTHON: ${{env.PYTHON_EXECUTABLE}}
+        with:
+          version: ${{ env.GCE_CLI_GHA_VERSION }}
+          service_account_key: ${{ secrets.GCE_SA_KEY_GPU_CI }}
+          project_id: ${{ secrets.GCE_DOCS_PROJECT }}
+          export_default_credentials: true
+
+      - name: Upload package to GCS bucket
+        if: ${{ github.ref == 'refs/heads/master' && matrix.SHARED == 'ON' && matrix.BUILD_CUDA == 'OFF' }}
+        env:
+          CLOUDSDK_PYTHON: ${{env.PYTHON_EXECUTABLE}}
+        run: |
+          gsutil cp ${{ env.BUILD_DIR }}/package/${{ env.DEVEL_PKG_NAME }} gs://open3d-releases-master/devel/
+          if ($LastExitCode -eq 0) {
+            echo "Download devel package at: https://storage.googleapis.com/open3d-releases-master/devel/${{ env.DEVEL_PKG_NAME }}"
+          } else {
+            throw "Devel package upload failed"
+          }
+
       - name: Run C++ unit tests
         if: ${{ matrix.BUILD_CUDA == 'OFF' }}
         working-directory: ${{ env.BUILD_DIR }}
