--- a/.github/workflows/macos.yml
+++ b/.github/workflows/macos.yml
@@ -65,7 +65,7 @@ jobs:
           PATH=/usr/local/var/homebrew/linked/ccache/libexec:$PATH
           ccache -s
           ./util/run_ci.sh
-          DEVEL_PKG_NAME="$(basename package/open3d*.tgz)"
+          DEVEL_PKG_NAME="$(basename package/open3d-devel-*.tar.xz)"
           echo "DEVEL_PKG_NAME=$DEVEL_PKG_NAME" >> $GITHUB_ENV
       - name: Build Open3D viewer app
         if: ${{ matrix.BUILD_ML_OPS == 'OFF' }}
@@ -86,7 +86,7 @@ jobs:
           if-no-files-found: error
 
       - name: GCloud CLI setup
-        if: ${{ github.ref == 'refs/heads/master' && env.SHARED == 'ON' }}
+        if: ${{ github.ref != 'refs/heads/master' && env.SHARED == 'ON' }}
         # https://github.com/GoogleCloudPlatform/github-actions/issues/100#issuecomment-650798308
         uses: google-github-actions/setup-gcloud@v0.2.1
         with:
@@ -96,7 +96,7 @@ jobs:
           export_default_credentials: true
 
       - name: Upload package to GCS bucket
-        if: ${{ github.ref == 'refs/heads/master' && env.SHARED == 'ON' }}
+        if: ${{ github.ref != 'refs/heads/master' && env.SHARED == 'ON' }}
         run: |
           gsutil cp build/package/${{ env.DEVEL_PKG_NAME }} gs://open3d-releases-master/devel/
           echo "Download devel package at: https://storage.googleapis.com/open3d-releases-master/devel/${{ env.DEVEL_PKG_NAME }}"
