--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -119,6 +119,7 @@ jobs:
             --target build-examples-iteratively
           cmake --build . --parallel ${{ env.NPROC }} --config ${{ matrix.CONFIG }} `
             --target INSTALL
+
       - name: Package
         working-directory: ${{ env.BUILD_DIR }}
         if: ${{ matrix.SHARED == 'ON' && matrix.BUILD_CUDA == 'OFF' }}
@@ -126,19 +127,20 @@ jobs:
           $ErrorActionPreference = 'Stop'
           cmake --build . --parallel ${{ env.NPROC }} --config ${{ matrix.CONFIG }} `
             --target package
-          $DEVEL_PKG_NAME=(Get-ChildItem package/open3d*.zip).Name
-          echo "DEVEL_PKG_NAME=$DEVEL_PKG_NAME"  | Out-File -FilePath $env:GITHUB_ENV -Encoding utf8 -Append
+          $DEVEL_PKG_NAME=(Get-ChildItem package/open3d-devel-*.zip).Name
+          echo "DEVEL_PKG_NAME=$DEVEL_PKG_NAME"  | Out-File -FilePath `
+            $env:GITHUB_ENV -Encoding utf8 -Append
 
       - name: Upload package
         if: ${{ matrix.SHARED == 'ON' && matrix.BUILD_CUDA == 'OFF' }}
         uses: actions/upload-artifact@v2
         with:
-          name: open3d-devel-win
+          name: open3d-devel-windows
           path: ${{ env.BUILD_DIR }}/package/${{ env.DEVEL_PKG_NAME }}
           if-no-files-found: error
 
       - name: GCloud CLI setup
-        if: ${{ github.ref == 'refs/heads/master' && matrix.SHARED == 'ON' && matrix.BUILD_CUDA == 'OFF' }}
+        if: ${{ github.ref != 'refs/heads/master' && matrix.SHARED == 'ON' && matrix.BUILD_CUDA == 'OFF' }}
         # https://github.com/GoogleCloudPlatform/github-actions/issues/100#issuecomment-650798308
         uses: google-github-actions/setup-gcloud@v0.2.1
         env:
@@ -150,11 +152,12 @@ jobs:
           export_default_credentials: true
 
       - name: Upload package to GCS bucket
-        if: ${{ github.ref == 'refs/heads/master' && matrix.SHARED == 'ON' && matrix.BUILD_CUDA == 'OFF' }}
+        if: ${{ github.ref != 'refs/heads/master' && matrix.SHARED == 'ON' && matrix.BUILD_CUDA == 'OFF' }}
         env:
           CLOUDSDK_PYTHON: ${{env.PYTHON_EXECUTABLE}}
         run: |
-          gsutil cp ${{ env.BUILD_DIR }}/package/${{ env.DEVEL_PKG_NAME }} gs://open3d-releases-master/devel/
+          gsutil cp ${{ env.BUILD_DIR }}/package/${{ env.DEVEL_PKG_NAME }} `
+            gs://open3d-releases-master/devel/
           if ($LastExitCode -eq 0) {
             echo "Download devel package at: https://storage.googleapis.com/open3d-releases-master/devel/${{ env.DEVEL_PKG_NAME }}"
           } else {
